styles.css
/*-----Adam Demol 2022-----*/
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&');

:root {
  line-height: 1.4;
  font-size: 16px;
  font-family: "Montserrat", Arial, Helvetica, sans-serif;
  --colour1: #f5f2f2;
  --colour2: #a11f37;
  --colour3: #23282c;
  --colour4: #364d6b;
  --colour5: #111;
  --section-size: 2;
  --slider-index: 1;
}

/* remove default styles from everything */
* { margin: 0px; padding: 0px; border: 0px; box-sizing: border-box; }
*::before, *::after { box-sizing: border-box; }

html { scroll-behavior: smooth; }

body {
  position: relative;
  color: var(--colour4);
  background: var(--colour1);
  overflow-x: hidden;
  min-height: 100vh;
}

a {  
  color: var(--colour1);
  text-decoration: none;
}

h1 { font-size: 2.4rem; }
h2 { font-size: 1.7rem; }
h3 { font-size: 1.1rem; }

main {
  background: var(--colour1);
}

section {
  display: grid;
  justify-content: center;
  padding: 5rem 3rem;
}

header {
  display: grid;
  justify-items: center;
  align-items: center;
  padding: 3rem;
  min-height: 35vh;
}

.headline {
  display: grid;
  justify-items: center;
  text-align: center;
  gap: 1rem;
}

.header-text {
  font-size: 1.2rem;
}

nav {
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--colour2);
  color: var(--colour1);
  padding: 2rem;
  gap: 1rem;
}

nav ul {
  display: flex;
  gap: 1rem;
  color: var(--colour1);
  list-style: none;
}

nav ul li a {
  font-size: 1.2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  width: fit-content;
  border-bottom: 5px solid var(--colour2);
  transition: all 100ms ease-in-out;
}

nav ul li a:hover {
  border-bottom: 3px solid var(--colour1);
}

.cta {
  width: fit-content;
  padding: 1rem 1.6rem;
  border: .3rem solid var(--colour3);
  border-radius: 10px;
  color: white;
  transition: 200ms ease-in-out;
  text-decoration: none;
  display: block;
  font-size: 1.2rem;
  color: var(--colour3);
  box-shadow: 0px 5px, 0px 7px 10px #999;
  margin-top: 1rem;
}

.cta:hover {
  box-shadow: unset;
  transform: translateY(4px);
}

.projects {
  padding: 5rem;
}

.projects h1 {
  text-align: center;
  margin-bottom: 4rem;
}

.projects-wrap {
  display: grid;
  grid-template-columns: repeat(auto-fill, 600px);
  justify-content: center;
  gap: 5rem;
  max-width: 1300px;
  min-width: 350px;
}

.project-card {
  font-size: .9rem;
  display: grid;
  gap: 1.5rem;
  padding: 8rem 3rem 3rem 3rem;
  background: var(--colour4);
  color: var(--colour1);
  position: relative;
  transition: all 150ms ease-in-out;
}

.project-card:hover {
  transform: translate(3px, -3px);
  box-shadow: -8px 8px 10px 0 #999;
}

.project-card h2 {
  position: absolute;
  border-left: 10px solid var(--colour2);
  background: var(--colour1);
  color: var(--colour5);
  width: 100%;
  top:0;
  height: 5rem;
  display: flex;
  align-items: center;
  padding-left: 3rem;
}

.project-btns {
  display: flex;
  gap: 1rem;
}

.dark-section {
  background: linear-gradient(135deg, #373f46, #23282c);
  box-shadow: 0 0 20px 0 #888;
}

.img {
  width: 20rem;
  height: 10rem;
  object-fit: cover;
  box-shadow: 6px 6px 10px 0 var(--colour5);
}

.divider {
  display: flex;
  gap: 4rem;
  color: var(--colour1);
}

.gallery-btn {
  display: grid;
  align-items: center;
  text-align: center;
  border-radius: 10px;
  width: fit-content;
  padding: .8rem 1rem;
  transition: all 150ms ease-in-out;
}

.project-btn {
  display: flex;
  align-items: center;
  gap: 10px;
  border-radius: 10px;
  border: 4px solid var(--colour3);
  padding: .5rem .9rem;
  transition: all 150ms ease-in-out;
}

.project-btn:hover {
  background: var(--colour3);
}

.project-btns svg {
  width: 30px;
  fill: var(--colour1);
  transition: all 150ms ease-in-out;
}

.gallery-btn {
  border: 4px solid var(--colour1);
  background: unset;
  color: var(--colour1);
  font-size: 1rem;
  cursor: pointer;
}

.gallery-btn:hover {
  background: var(--colour1);
  color: var(--colour4);
}

.gallery-text {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.btt-btn {
  position: fixed;
  z-index: 999;
  bottom: 10px;
  right: 10px;
}

.btt-btn svg {
  height: 40px;
  width: 40px;
}

/* Gallery */
.gallery {
  position: fixed;
  display: none;
  pointer-events: none;
  opacity: 0;
  background: var(--colour1);
  transition: all 300ms ease-in-out;
  background: rgba(0,0,0, 0.7);
  inset: 0;
  align-items: center;
  z-index: 9999;
}

.carousel-wrap {
  display: grid;
  grid-template-columns: 4vw calc(92vw - 15px) 4vw;
  position: relative;
  overflow-x: hidden;
  padding: 2rem 0;
  background-color: var(--colour1);
}

.slider {
  display: flex;
  transition: transform 250ms ease;
  max-height: 600px;
}

.slider img {
  /* opacity: 0; */
  flex: 0 0 calc(calc(92vw - 15px) / var(--section-size));
  min-width: 100px;
  width: 100%;
  transition: transform 200ms ease;
  transform: translateX(-100%);
  object-fit: cover;
  max-height: 600px;
  padding: 0 1vw;
}

.slide-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;
  z-index: 100;
  cursor: pointer;
  width: 4vw;
  height: 4vw;
  border-radius: 50%;
  background: var(--colour2);
  box-shadow: 0 4px 10px 0 black;
}

.slide-btn svg {
  width: 2vw;
  height: 2vw;
  pointer-events: none;
  fill: white;
}

.slide-btn:hover {
  background-color: var(--colour4);
}

/* Screens under 600px styles */
@media screen and (max-width: 600px) {
  nav {
    padding: 2rem 1rem;
  }

  nav ul li a {
    font-size: .9rem;
  }

  .projects {
    padding: 3rem;
  }

  .projects-wrap {
    grid-template-columns: repeat(auto-fill, 300px);
    gap: 3rem;
  }
  
  .project-card {
    font-size: .8rem;
    gap: 1rem;
    padding: 7rem 2rem 2rem 2rem;
  }

  .project-card h2 {
    font-size: 1.3rem;
    padding-left: 2rem;
  }

  .img {
    display: none;
  }

  .gallery-text {
    align-items: center;
  }

  .carousel-wrap {
    grid-template-columns: 4vw calc(92vw) 4vw;
  }
  
  .slider {
    display: flex;
    transition: transform 250ms ease;
    max-height: 600px;
  }
  
  .slider img {
    flex: 0 0 calc(calc(92vw) / var(--section-size));
  }
}

